// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuButton Pure after click on button child div\'s should added open css class name to their classNames component match expected snapshot 1`] = `
<div
  className="default-MenuButton-container"
  onClick={[Function]}
>
  <div
    className="default-MenuButton-firstLine default-MenuButton-allLines open"
  />
  <div
    className="default-MenuButton-secondLine default-MenuButton-allLines open"
  />
  <div
    className="default-MenuButton-thirdLine default-MenuButton-allLines open"
  />
  <div
    className="default-MenuButton-fourthLine default-MenuButton-allLines open"
  />
</div>
`;

exports[`MenuButton Pure component match expected snapshot 1`] = `
<div
  className="default-MenuButton-container"
  onClick={[Function]}
>
  <div
    className="default-MenuButton-firstLine default-MenuButton-allLines"
  />
  <div
    className="default-MenuButton-secondLine default-MenuButton-allLines"
  />
  <div
    className="default-MenuButton-thirdLine default-MenuButton-allLines"
  />
  <div
    className="default-MenuButton-fourthLine default-MenuButton-allLines"
  />
</div>
`;
